# cmake_project_skeleton

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: configuration.cmake
cmake/modules/: Findcatch.cmake  Findcatch2.cmake  Findexample.cmake
dependency/fakeit/: fakeit.hpp
test/: example_test.cc
test/unit/: CMakeLists.txt  example_suite.cc
